--- a/Task5/index.html
+++ b/Task5/index.html
@@ -29,7 +29,7 @@
     ></script>
   </head>
   <body class="bg-light">
-    <section class="mt-5 ">
+    <section class="mt-5">
       <div class="text-center mt-5">
         <img
           src="https://i.pinimg.com/736x/04/6c/b7/046cb73e86a26e255fbefd347e57491c.jpg"
@@ -76,8 +76,12 @@
           </button>
         </form>
       </div>
-
-      
     </section>
+
+    <a
+      href="index2.html "
+      style="color: rgb(255, 0, 0); text-decoration: none; padding-left: 600px"
+      >Go to page 2</a
+    >
   </body>
 </html>
